--- a/styles/style.css
+++ b/styles/style.css
@@ -2,12 +2,117 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap');
 
-body{
+body {
     font-family: "Azeret Mono", monospace;
 }
 
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+
+/* banner section */
+
+.banner-section {
+    background-image: url('../assets/Hero-bg.png');
+    width: 1900px;
+    height: 652px;
+
+}
+
+.banner-text-content {
+    text-align: center;
+    padding-top: 26px;
+
+}
+
+.banner-text-content>h2 {
+    font-size: 48px;
+    font-weight: 800;
+    margin-top: 32px;
+    margin-bottom: 24px;
+}
+
+.banner-text-content>p {
+    color: rgb(13, 19, 33);
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.banner-text-content>button {
+    margin-top: 32px;
+    border-radius: 8px;
+    background: rgb(13, 19, 33);
+    gap: 10;
+    padding: 21px 24px 21px 24px;
+    color: rgb(255, 255, 255);
+    font-family: Azeret Mono;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+/* web development section */
+.web-development-section {
+    width: 1480px;
+    height: 1420px;
+    display: flex;
+    margin: 0 auto;
+    margin-top: 74px;
+    border-radius: 16px;
+    background: rgba(13, 19, 33, 0.02);
+}
+
+.development-section {
+    width: 1300px;
+    height: 1233px;
+    padding: 80px;
+    margin-top: 80px;
+    margin: 0 auto;
+}
+
+.development-title-section {
+    text-align: center;
+    /* margin-left: 80px; */
+}
+
+.development-title-section>h2 {
+    color: rgb(13, 19, 33);
+    font-size: 32px;
+    font-weight: 800;
+}
+
+.development-title-section>p {
+    color: rgb(13, 19, 33);
+    font-weight: 400;
+    margin-top: 24px;
+}
+
+.development-image-section {
+    display: flex;
+    gap: 120px;
+    padding: 80px;
+   
+}
+
+.image-section>h2 {
+    color: rgba(13, 19, 33, 0.7);
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 32px;
+}
+
+.image-section>p {
+    color: rgb(13, 19, 33);
+    font-weight: 400;
+    margin-top: 16px;
+    margin-bottom: 32px;
+}
+
+.image-section>button {
+    gap: 10;
+    padding: 12px 20px 12px 20px;
+    color: rgb(13, 19, 33);
+    font-size: 20px;
+    font-weight: 600;
 }
